Account views & assets

--- a/resources/less/tibia/content/account.less
+++ b/resources/less/tibia/content/account.less
@@ -1,7 +1,17 @@
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/login
+ */
 .account-login #middle-column {
 	.buttons-right {
 		margin-right: 2px;
 		float: right;
+
+		a, button {
+			display: block;
+		}
 	}
 
 	.information {
@@ -18,6 +28,13 @@
 	}
 }
 
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/create
+ */
 .account-create #middle-column {
 	label[for="male"] {
 		display: inline-block;
@@ -30,5 +47,92 @@
 
 	button.blue-button {
 		margin: 0 auto;
+		display: block;
 	}
 }
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/logout
+ */
+.account-logout #middle-column { }
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account
+ */
+.account-index #middle-column {
+	.buttons-right {
+		margin-right: 2px;
+		float: right;
+
+		a, button {
+			display: block;
+		}
+
+		.blue-button, .green-button {
+			margin-bottom: 4px;
+		}
+	}
+}
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/manage
+ */
+.account-manage #middle-column {
+	.buttons-right {
+		a, button {
+			display: block;
+		}
+
+		.green-button {
+			margin-bottom: 4px;
+		}
+	}
+}
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/password
+ */
+.account-password #middle-column { }
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/email
+ */
+.account-email #middle-column { }
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/rename
+ */
+.account-rename #middle-column { }
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/terminate
+ */
+.account-terminate #middle-column { }
