--- a/resources/less/tibia/middle-column.less
+++ b/resources/less/tibia/middle-column.less
@@ -97,7 +97,14 @@
 
 			& > .inner-box {
 				border: 1px solid #793d03;
+				min-height: 367px;
 				padding: 5px;
+
+				& > p {
+					font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+					margin: 5px 5px 15px;
+					font-size: 12px;
+				}
 			}
 		}
 	}
