--- a/assets/css/tibia.css
+++ b/assets/css/tibia.css
@@ -28,6 +28,40 @@ h1 {
   margin: 16px 0;
   color: #5a2800;
 }
+h2 {
+  font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+  margin: -6px 0 28px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 17px;
+  color: #5a2800;
+}
+h2:before {
+  content: url('../img/headline-bracer-left.gif');
+  position: relative;
+  height: 41px;
+  width: 46px;
+  left: -4px;
+  top: 14px;
+}
+h2:after {
+  content: url('../img/headline-bracer-right.gif');
+  position: relative;
+  height: 41px;
+  width: 46px;
+  right: -4px;
+  top: 14px;
+}
+h4 {
+  font-size: 18.6px;
+  font-weight: bold;
+  margin: 0;
+}
+.offline,
+.red,
+.free {
+  color: #ef0000;
+}
 .medium-button {
   background: url('../img/medium-button.gif') no-repeat top left;
   text-align: center;
@@ -43,59 +77,83 @@ h1 {
 .medium-button:hover {
   background-position-y: -37px;
 }
-.green-button {
+.green-button,
+.blue-button,
+.red-button {
   background: url('../img/sbutton_green.gif') no-repeat top left;
+  display: inline-block;
   text-align: center;
   line-height: 25px;
+  overflow: hidden;
   margin: 0 0 2px;
   cursor: pointer;
-  display: block;
   height: 25px;
   width: 135px;
   border: none;
   padding: 0;
 }
-.green-button:hover {
+.green-button:hover,
+.blue-button:hover,
+.red-button:hover {
   background-position-y: -25px;
+}
+.green-button:hover img,
+.blue-button:hover img,
+.red-button:hover img {
+  margin: 1px 0 0 1px;
 }
 .blue-button {
-  background: url('../img/sbutton_blue.gif') no-repeat top left;
+  background-image: url('../img/sbutton_blue.gif');
+}
+.red-button {
+  background-image: url('../img/sbutton_red.gif');
+}
+.play-button {
+  background: url('../img/play-button.gif') no-repeat top left;
   text-align: center;
-  line-height: 25px;
-  margin: 0 0 2px;
+  line-height: 46px;
   cursor: pointer;
   display: block;
-  height: 25px;
-  width: 135px;
   border: none;
+  height: 46px;
+  width: 46px;
   padding: 0;
+  margin: 0;
 }
-.blue-button:hover {
-  background-position-y: -25px;
-}
-.blue-button:hover img {
-  margin: 1px 0 0 1px;
+.play-button:hover {
+  background-position-y: -46px;
 }
 .error {
   color: #ed1111;
 }
-.errors {
+.padding {
+  padding: 10px;
+}
+.errors,
+.notification {
   font-family: Verdana, Arial, 'Times New Roman', sans-serif;
   background-color: #d4c0a1;
-  padding: 8px 5px 8px 42px;
   margin: 6px 6px 16px;
   position: relative;
-  font-size: 10.6px;
+  font-size: 13.3px;
   min-height: 24px;
+  padding: 8px 5px;
+}
+.errors.errors,
+.notification.errors {
+  padding-left: 42px;
+  font-size: 10.6px;
   color: #ed1111;
 }
-.errors h5 {
+.errors h5,
+.notification h5 {
   font-weight: bold;
   font-size: 10.6px;
   padding: 0;
   margin: 0;
 }
-.errors .sign {
+.errors .sign,
+.notification .sign {
   background: url('../img/attentionsign.gif');
   position: absolute;
   height: 26px;
@@ -103,7 +161,8 @@ h1 {
   left: 7px;
   top: 6px;
 }
-.errors:before {
+.errors:before,
+.notification:before {
   background: url('../img/box-frame-vertical.gif');
   position: absolute;
   content: '';
@@ -112,7 +171,8 @@ h1 {
   bottom: 0;
   top: 0;
 }
-.errors:after {
+.errors:after,
+.notification:after {
   background: url('../img/box-frame-vertical.gif');
   position: absolute;
   content: '';
@@ -121,7 +181,8 @@ h1 {
   bottom: 0;
   top: 0;
 }
-.errors > .borders:before {
+.errors > .borders:before,
+.notification > .borders:before {
   background: url('../img/table-headline-border.gif');
   position: absolute;
   content: '';
@@ -130,7 +191,8 @@ h1 {
   right: 0;
   left: 0;
 }
-.errors > .borders:after {
+.errors > .borders:after,
+.notification > .borders:after {
   background: url('../img/table-headline-border.gif');
   position: absolute;
   bottom: -1px;
@@ -139,7 +201,8 @@ h1 {
   right: 0;
   left: 0;
 }
-.errors > .borders > .edges.top:before {
+.errors > .borders > .edges.top:before,
+.notification > .borders > .edges.top:before {
   background: url('../img/box-frame-edge.gif');
   position: absolute;
   content: '';
@@ -148,7 +211,8 @@ h1 {
   left: -2px;
   top: -2px;
 }
-.errors > .borders > .edges.top:after {
+.errors > .borders > .edges.top:after,
+.notification > .borders > .edges.top:after {
   background: url('../img/box-frame-edge.gif');
   position: absolute;
   content: '';
@@ -157,7 +221,8 @@ h1 {
   width: 5px;
   top: -2px;
 }
-.errors > .borders > .edges.bottom:before {
+.errors > .borders > .edges.bottom:before,
+.notification > .borders > .edges.bottom:before {
   background: url('../img/box-frame-edge.gif');
   position: absolute;
   bottom: -2px;
@@ -166,7 +231,8 @@ h1 {
   width: 5px;
   left: -2px;
 }
-.errors > .borders > .edges.bottom:after {
+.errors > .borders > .edges.bottom:after,
+.notification > .borders > .edges.bottom:after {
   background: url('../img/box-frame-edge.gif');
   position: absolute;
   bottom: -2px;
@@ -178,7 +244,7 @@ h1 {
 #skeleton {
   margin: 156px auto 20px;
   max-width: 1200px;
-  min-width: 1000px;
+  min-width: 1080px;
   display: block;
   clear: both;
 }
@@ -528,7 +594,13 @@ h1 {
 }
 #middle-column > .box > .inner-box-border > .inner-box {
   border: 1px solid #793d03;
+  min-height: 367px;
   padding: 5px;
+}
+#middle-column > .box > .inner-box-border > .inner-box > p {
+  font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+  margin: 5px 5px 15px;
+  font-size: 12px;
 }
 #right-column {
   position: relative;
@@ -555,6 +627,7 @@ h1 {
 #right-column #pedestal .online {
   font-family: Verdana, Arial, Times New Roman, sans-serif;
   text-decoration: none;
+  font-weight: normal;
   text-align: center;
   position: absolute;
   line-height: 8pt;
@@ -595,6 +668,7 @@ h1 {
 #right-column .box.premium {
   background: url('../img/premiumbox.gif') no-repeat top left;
   display: inline-block;
+  text-align: center;
   padding: 0 0 12px;
   margin: 0 0 10px;
   height: 152px;
@@ -613,6 +687,9 @@ h1 {
 }
 #right-column .box.premium .inner-box .green-button {
   margin: 79px auto 0;
+}
+#right-column .box.premium .inner-box .green-button img {
+  display: inline-block;
 }
 #right-column .box.networks {
   background: url('../img/networksbox.png') no-repeat top left;
@@ -670,6 +747,43 @@ table tr th {
 table tr th {
   padding-right: 11px;
   text-align: left;
+}
+.table-striped {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0;
+}
+.table-striped.table-hover tr:hover td {
+  background-color: #ffedd1;
+}
+.table-striped.table-hover tr:hover:nth-child(odd) td {
+  background-color: #e7d1af;
+}
+.table-striped tr:nth-child(odd) td,
+.table-striped tr:nth-child(odd) th {
+  background-color: #d5c0a1;
+}
+.table-striped tr.active td {
+  font-weight: bold;
+}
+.table-striped tr.active td[align="center"][valign="middle"] {
+  font-weight: normal;
+}
+.table-striped tr.active td span {
+  font-size: 17.3px;
+}
+.table-striped tr td,
+.table-striped tr th {
+  border: 1px solid #faf0d7 !important;
+  background-color: #f1e0c6;
+}
+.table-striped tr td.header,
+.table-striped tr th.header {
+  background-color: #d5c0a1;
+}
+.table-striped tr td span,
+.table-striped tr th span {
+  display: block;
 }
 .table {
   font-family: Verdana, Arial, 'Times New Roman', sans-serif;
@@ -729,6 +843,7 @@ table tr th {
   height: 5px;
   width: 5px;
   left: -2px;
+  z-index: 1;
   top: -2px;
 }
 .table > .header > .borders > .edges.top:after {
@@ -738,6 +853,7 @@ table tr th {
   height: 5px;
   right: -2px;
   width: 5px;
+  z-index: 1;
   top: -2px;
 }
 .table > .header > .borders > .edges.bottom:before {
@@ -748,6 +864,7 @@ table tr th {
   height: 5px;
   width: 5px;
   left: -2px;
+  z-index: 1;
 }
 .table > .header > .borders > .edges.bottom:after {
   background: url('../img/box-frame-edge.gif');
@@ -757,12 +874,17 @@ table tr th {
   height: 5px;
   right: -2px;
   width: 5px;
+  z-index: 1;
 }
 .table > .content {
   background-color: #f1e0c5;
   border: 2px solid #55636c;
   padding: 7px 6px 0;
   border-top: none;
+}
+.table > .content.dark {
+  background-color: #d4c0a1;
+  padding: 7px 6px;
 }
 .table > .content > .box {
   box-shadow: 2px 3px 2px #7c5231;
@@ -786,9 +908,19 @@ table tr th {
 .table > .content > .box > .inner-box:after {
   clear: both;
 }
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/login
+ */
 .account-login #middle-column .buttons-right {
   margin-right: 2px;
   float: right;
+}
+.account-login #middle-column .buttons-right a,
+.account-login #middle-column .buttons-right button {
+  display: block;
 }
 .account-login #middle-column .information {
   padding-bottom: 4px;
@@ -800,6 +932,12 @@ table tr th {
 .account-login #middle-column .information .indent {
   margin: 0 0 0 10px;
 }
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/create
+ */
 .account-create #middle-column label[for="male"] {
   display: inline-block;
   margin-right: 60px;
@@ -809,6 +947,68 @@ table tr th {
 }
 .account-create #middle-column button.blue-button {
   margin: 0 auto;
+  display: block;
 }
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/logout
+ */
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account
+ */
+.account-index #middle-column .buttons-right {
+  margin-right: 2px;
+  float: right;
+}
+.account-index #middle-column .buttons-right a,
+.account-index #middle-column .buttons-right button {
+  display: block;
+}
+.account-index #middle-column .buttons-right .blue-button,
+.account-index #middle-column .buttons-right .green-button {
+  margin-bottom: 4px;
+}
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/manage
+ */
+.account-manage #middle-column .buttons-right a,
+.account-manage #middle-column .buttons-right button {
+  display: block;
+}
+.account-manage #middle-column .buttons-right .green-button {
+  margin-bottom: 4px;
+}
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/password
+ */
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/email
+ */
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/rename
+ */
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /account/terminate
+ */
 
 /*# sourceMappingURL=tibia.css.map */
