--- a/resources/less/tibia/right-column.less
+++ b/resources/less/tibia/right-column.less
@@ -24,6 +24,7 @@
 		.online {
 			font-family: Verdana, Arial, Times New Roman, sans-serif;
 			text-decoration: none;
+			font-weight: normal;
 			text-align: center;
 			position: absolute;
 			line-height: 8pt;
@@ -68,6 +69,7 @@
 		&.premium {
 			background: url('../img/premiumbox.gif') no-repeat top left;
 			display: inline-block;
+			text-align: center;
 			padding: 0 0 12px;
 			margin: 0 0 10px;
 			height: 152px;
@@ -88,6 +90,10 @@
 
 				.green-button {
 					margin: 79px auto 0;
+
+					img {
+						display: inline-block;
+					}
 				}
 			}
 		}
