--- a/resources/less/tibia/layout.less
+++ b/resources/less/tibia/layout.less
@@ -11,7 +11,7 @@ body {
 }
 
 a {
-	font-family: Verdana, Arial, Times New Roman, sans-serif;
+	font-family: Verdana, Arial, 'Times New Roman', sans-serif;
 	text-decoration: none;
 	font-weight: bold;
 	color: #004294;
