--- a/assets/css/tibia.css
+++ b/assets/css/tibia.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
 }
 a {
-  font-family: Verdana, Arial, Times New Roman, sans-serif;
+  font-family: Verdana, Arial, 'Times New Roman', sans-serif;
   text-decoration: none;
   font-weight: bold;
   color: #004294;
