Support views & removed faker

--- a/assets/css/tibia.css
+++ b/assets/css/tibia.css
@@ -1011,5 +1011,23 @@ table tr th {
  *
  * @route  /account/terminate
  */
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /support/rules
+ */
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /support/terms
+ */
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /support/privacy
+ */
 
 /*# sourceMappingURL=tibia.css.map */
