--- a/resources/less/tibia/content/support.less
+++ b/resources/less/tibia/content/support.less
@@ -5,6 +5,51 @@
  * @route  /support/rules
  */
 .support-rules #middle-column {
+	.content.dark {
+		padding: 1px 15px;
+	}
+
+	ul, ol {
+		margin: 0 0 50px;
+
+		& > li {
+			margin: 25px 0 5px;
+			font-weight: bold;
+
+			& > p {
+				font-weight: normal;
+				margin: 0;
+			}
+
+			& > ul, & > ol {
+				counter-reset: list;
+				padding-left: 0;
+				margin: 0;
+
+				& > li {
+					list-style: none;
+					margin: 3px 0;
+
+					&:before {
+						content: counter(list, lower-alpha) ")";
+						counter-increment: list;
+						display: inline-block;
+						margin-right: 4px;
+					}
+
+					& > p {
+						margin-left: 20px;
+						display: block;
+
+						&:first-child {
+							display: inline-block;
+							margin: 1px 0;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 /**
@@ -14,6 +59,9 @@
  * @route  /support/terms
  */
 .support-terms #middle-column {
+	.content.dark {
+		padding: 1px 15px;
+	}
 }
 
 /**
@@ -23,4 +71,7 @@
  * @route  /support/privacy
  */
 .support-privacy #middle-column {
+	.content.dark {
+		padding: 1px 15px;
+	}
 }
