--- a/resources/less/tibia/middle-column.less
+++ b/resources/less/tibia/middle-column.less
@@ -3,7 +3,7 @@
     padding-top: 4px;
 
     & > .box {
-        background: url('../img/scroll.gif') repeat top left;
+        background: url('@{image-path}/scroll.gif') repeat top left;
         border-right: 2px solid #3a3738;
         border-left: 2px solid #3a3738;
         position: relative;
@@ -11,7 +11,7 @@
         padding: 6px 0;
 
         &:before {
-            background: url('../img/border-1.gif') repeat-x top left;
+            background: url('@{image-path}/border-1.gif') repeat-x top left;
             position: absolute;
             height: 6px;
             content: '';
@@ -21,7 +21,7 @@
         }
 
         &:after {
-            background: url('../img/border-1.gif') repeat-x top left;
+            background: url('@{image-path}/border-1.gif') repeat-x top left;
             position: absolute;
             height: 6px;
             content: '';
@@ -40,7 +40,7 @@
                 top: 0;
 
                 &:before {
-                    content: url('../img/corner-tl.gif');
+                    content: url('@{image-path}/corner-tl.gif');
                     position: absolute;
                     height: 17px;
                     width: 17px;
@@ -49,7 +49,7 @@
                 }
 
                 &:after {
-                    content: url('../img/corner-tr.gif');
+                    content: url('@{image-path}/corner-tr.gif');
                     position: absolute;
                     height: 17px;
                     width: 17px;
@@ -62,7 +62,7 @@
                 bottom: 0;
 
                 &:before {
-                    content: url('../img/corner-bl.gif');
+                    content: url('@{image-path}/corner-bl.gif');
                     position: absolute;
                     bottom: -4px;
                     height: 17px;
@@ -71,7 +71,7 @@
                 }
 
                 &:after {
-                    content: url('../img/corner-br.gif');
+                    content: url('@{image-path}/corner-br.gif');
                     position: absolute;
                     bottom: -4px;
                     height: 17px;
@@ -82,7 +82,7 @@
         }
 
         & > .header {
-            background: url('../img/title-background-green.gif') repeat-x top left;
+            background: url('@{image-path}/title-background-green.gif') repeat-x top left;
             display: block;
             height: 24px;
 
