--- a/resources/less/tibia/layout.less
+++ b/resources/less/tibia/layout.less
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('../img/background-artwork.jpg') no-repeat top center #051122;
+    background: url('@{image-path}/background-artwork.jpg') no-repeat top center #051122;
     font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
     overflow-y: scroll;
     font-size: 13px;
@@ -13,8 +13,8 @@ body {
 a {
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
     text-decoration: none;
+    color: @link-color;
     font-weight: bold;
-    color: #004294;
 
     &:hover {
         text-decoration: underline;
@@ -27,23 +27,23 @@ a {
 
 h1 {
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+    color: @heading-color;
     text-align: center;
     font-weight: bold;
     font-size: 24px;
     margin: 16px 0;
-    color: #5a2800;
 }
 
 h2 {
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+    color: @heading-color;
     margin: -6px 0 28px;
     text-align: center;
     font-weight: bold;
     font-size: 17px;
-    color: #5a2800;
 
     &:before {
-        content: url('../img/headline-bracer-left.gif');
+        content: url('@{image-path}/headline-bracer-left.gif');
         position: relative;
         height: 41px;
         width: 46px;
@@ -52,7 +52,7 @@ h2 {
     }
 
     &:after {
-        content: url('../img/headline-bracer-right.gif');
+        content: url('@{image-path}/headline-bracer-right.gif');
         position: relative;
         height: 41px;
         width: 46px;
@@ -70,11 +70,12 @@ h4 {
 .offline,
 .red,
 .free {
-    color: #ef0000;
+    color: @offline-color;
 }
 
 .flag {
     vertical-align: middle;
+    cursor: help;
 }
 
 .pull-left {
@@ -86,7 +87,7 @@ h4 {
 }
 
 .showhide {
-    background: url('../img/showhide.gif');
+    background: url('@{image-path}/showhide.gif');
     cursor: pointer;
     display: block;
     outline: none;
@@ -102,7 +103,7 @@ h4 {
 }
 
 .medium-button {
-    background: url('../img/medium-button.gif') no-repeat top left;
+    background: url('@{image-path}/medium-button.gif') no-repeat top left;
     text-align: center;
     line-height: 37px;
     overflow: hidden;
@@ -122,7 +123,7 @@ h4 {
 .green-button,
 .blue-button,
 .red-button {
-    background: url('../img/sbutton_green.gif') no-repeat top left;
+    background: url('@{image-path}/sbutton_green.gif') no-repeat top left;
     display: inline-block;
     text-align: center;
     line-height: 25px;
@@ -144,15 +145,15 @@ h4 {
 }
 
 .blue-button {
-    background-image: url('../img/sbutton_blue.gif');
+    background-image: url('@{image-path}/sbutton_blue.gif');
 }
 
 .red-button {
-    background-image: url('../img/sbutton_red.gif');
+    background-image: url('@{image-path}/sbutton_red.gif');
 }
 
 .play-button {
-    background: url('../img/play-button.gif') no-repeat top left;
+    background: url('@{image-path}/play-button.gif') no-repeat top left;
     text-align: center;
     line-height: 46px;
     cursor: pointer;
@@ -169,7 +170,7 @@ h4 {
 }
 
 .error {
-    color: #ed1111;
+    color: @error-color;
 }
 
 .padding {
@@ -179,7 +180,7 @@ h4 {
 .errors,
 .notification {
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
-    background-color: #d4c0a1;
+    background-color: @notification-bgcolor;
     margin: 6px 6px 16px;
     position: relative;
     font-size: 13.3px;
@@ -187,9 +188,9 @@ h4 {
     padding: 8px 5px;
 
     &.errors {
+        color: @error-color;
         padding-left: 42px;
         font-size: 10.6px;
-        color: #ed1111;
     }
 
     h5 {
@@ -200,7 +201,7 @@ h4 {
     }
 
     .sign {
-        background: url('../img/attentionsign.gif');
+        background: url('@{image-path}/attentionsign.gif');
         position: absolute;
         height: 26px;
         width: 30px;
@@ -209,7 +210,7 @@ h4 {
     }
 
     &:before {
-        background: url('../img/box-frame-vertical.gif');
+        background: url('@{image-path}/box-frame-vertical.gif');
         position: absolute;
         content: '';
         width: 3px;
@@ -219,7 +220,7 @@ h4 {
     }
 
     &:after {
-        background: url('../img/box-frame-vertical.gif');
+        background: url('@{image-path}/box-frame-vertical.gif');
         position: absolute;
         content: '';
         right: -1px;
@@ -230,7 +231,7 @@ h4 {
 
     & > .borders {
         &:before {
-            background: url('../img/table-headline-border.gif');
+            background: url('@{image-path}/table-headline-border.gif');
             position: absolute;
             content: '';
             height: 4px;
@@ -240,7 +241,7 @@ h4 {
         }
 
         &:after {
-            background: url('../img/table-headline-border.gif');
+            background: url('@{image-path}/table-headline-border.gif');
             position: absolute;
             bottom: -1px;
             content: '';
@@ -252,7 +253,7 @@ h4 {
         & > .edges {
             &.top {
                 &:before {
-                    background: url('../img/box-frame-edge.gif');
+                    background: url('@{image-path}/box-frame-edge.gif');
                     position: absolute;
                     content: '';
                     height: 5px;
@@ -262,7 +263,7 @@ h4 {
                 }
 
                 &:after {
-                    background: url('../img/box-frame-edge.gif');
+                    background: url('@{image-path}/box-frame-edge.gif');
                     position: absolute;
                     content: '';
                     height: 5px;
@@ -274,7 +275,7 @@ h4 {
 
             &.bottom {
                 &:before {
-                    background: url('../img/box-frame-edge.gif');
+                    background: url('@{image-path}/box-frame-edge.gif');
                     position: absolute;
                     bottom: -2px;
                     content: '';
@@ -284,7 +285,7 @@ h4 {
                 }
 
                 &:after {
-                    background: url('../img/box-frame-edge.gif');
+                    background: url('@{image-path}/box-frame-edge.gif');
                     position: absolute;
                     bottom: -2px;
                     content: '';
