--- a/resources/less/tibia/right-column.less
+++ b/resources/less/tibia/right-column.less
@@ -2,7 +2,7 @@
     position: relative;
 
     #pedestal {
-        background: url('../img/pedestal-and-online.gif');
+        background: url('@{image-path}/pedestal-and-online.gif');
         position: absolute;
         display: block;
         height: 107px;
@@ -24,6 +24,7 @@
         .online {
             font-family: Verdana, Arial, Times New Roman, sans-serif;
             text-decoration: none;
+            color: @online-color;
             font-weight: normal;
             text-align: center;
             position: absolute;
@@ -31,7 +32,6 @@
             cursor: pointer;
             display: block;
             font-size: 7pt;
-            color: #cfa600;
             bottom: 13px;
             width: 100%;
         }
@@ -45,7 +45,7 @@
         width: 164px;
 
         &:before {
-            background: url('../img/box-top.gif');
+            background: url('@{image-path}/box-top.gif');
             position: absolute;
             height: 12px;
             width: 180px;
@@ -56,7 +56,7 @@
         }
 
         &:after {
-            background: url('../img/box-bottom.gif');
+            background: url('@{image-path}/box-bottom.gif');
             position: absolute;
             height: 12px;
             width: 180px;
@@ -67,7 +67,7 @@
         }
 
         &.premium {
-            background: url('../img/premiumbox.gif') no-repeat top left;
+            background: url('@{image-path}/premiumbox.gif') no-repeat top left;
             display: inline-block;
             text-align: center;
             padding: 0 0 12px;
@@ -99,7 +99,7 @@
         }
 
         &.networks {
-            background: url('../img/networksbox.png') no-repeat top left;
+            background: url('@{image-path}/networksbox.png') no-repeat top left;
             display: inline-block;
             padding: 0 0 12px;
             margin: 0 0 10px;
@@ -125,7 +125,7 @@
             padding-top: 31px;
 
             &:before {
-                background: url('../img/screenshotbox.gif');
+                background: url('@{image-path}/screenshotbox.gif');
                 height: 31px;
                 left: -8px;
                 top: 0;
@@ -139,8 +139,8 @@
         }
 
         .inner-box {
-            background: url('../img/scroll.gif') repeat top left;
-            border-image: url('../img/frame.png') 5 4 fill;
+            background: url('@{image-path}/scroll.gif') repeat top left;
+            border-image: url('@{image-path}/frame.png') 5 4 fill;
             display: inline-block;
             border-width: 5px 4px;
             border-style: solid;
