--- a/resources/less/tibia/table.less
+++ b/resources/less/tibia/table.less
@@ -19,11 +19,11 @@ table {
     &.table-hover {
         tr:hover {
             td {
-                background-color: #ffedd1;
+                background-color: @table-light-hover;
             }
 
             &:nth-child(odd) td {
-                background-color: #e7d1af;
+                background-color: @table-medium-hover;
             }
         }
     }
@@ -31,7 +31,7 @@ table {
     tr {
         &:nth-child(odd) {
             td, th {
-                background-color: #d5c0a1;
+                background-color: @table-medium-bgcolor;
             }
         }
 
@@ -50,11 +50,11 @@ table {
         }
 
         td, th {
-            border: 1px solid #faf0d7 !important;
-            background-color: #f1e0c6;
+            border: 1px solid @table-light-border !important;
+            background-color: @table-light-bgcolor;
 
             &.header {
-                background-color: #d5c0a1;
+                background-color: @table-medium-bgcolor;
             }
 
             span {
@@ -66,21 +66,21 @@ table {
 
 .table {
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
-    border: 1px solid #000;
+    border: 1px solid @table-border;
+    color: @table-color;
     position: relative;
     font-size: 13.3px;
-    color: #5a2800;
     margin: 5px;
 
     & > .header {
-        background-color: #5f4d41;
+        background-color: @table-header-bgcolor;
+        color: @table-header-color;
         padding: 6px 14px 7px;
         position: relative;
         font-weight: bold;
-        color: #fff;
 
         &:before {
-            background: url('../img/box-frame-vertical.gif');
+            background: url('@{image-path}/box-frame-vertical.gif');
             position: absolute;
             content: '';
             width: 3px;
@@ -90,7 +90,7 @@ table {
         }
 
         &:after {
-            background: url('../img/box-frame-vertical.gif');
+            background: url('@{image-path}/box-frame-vertical.gif');
             position: absolute;
             content: '';
             right: -1px;
@@ -101,7 +101,7 @@ table {
 
         & > .borders {
             &:before {
-                background: url('../img/table-headline-border.gif');
+                background: url('@{image-path}/table-headline-border.gif');
                 position: absolute;
                 content: '';
                 height: 4px;
@@ -111,7 +111,7 @@ table {
             }
 
             &:after {
-                background: url('../img/table-headline-border.gif');
+                background: url('@{image-path}/table-headline-border.gif');
                 position: absolute;
                 bottom: -1px;
                 content: '';
@@ -123,7 +123,7 @@ table {
             & > .edges {
                 &.top {
                     &:before {
-                        background: url('../img/box-frame-edge.gif');
+                        background: url('@{image-path}/box-frame-edge.gif');
                         position: absolute;
                         content: '';
                         height: 5px;
@@ -134,7 +134,7 @@ table {
                     }
 
                     &:after {
-                        background: url('../img/box-frame-edge.gif');
+                        background: url('@{image-path}/box-frame-edge.gif');
                         position: absolute;
                         content: '';
                         height: 5px;
@@ -147,7 +147,7 @@ table {
 
                 &.bottom {
                     &:before {
-                        background: url('../img/box-frame-edge.gif');
+                        background: url('@{image-path}/box-frame-edge.gif');
                         position: absolute;
                         bottom: -2px;
                         content: '';
@@ -158,7 +158,7 @@ table {
                     }
 
                     &:after {
-                        background: url('../img/box-frame-edge.gif');
+                        background: url('@{image-path}/box-frame-edge.gif');
                         position: absolute;
                         bottom: -2px;
                         content: '';
@@ -173,25 +173,25 @@ table {
     }
 
     & > .content {
-        background-color: #f1e0c5;
-        border: 2px solid #55636c;
+        border: 2px solid @table-inner-border;
+        background-color: @table-bgcolor;
         padding: 7px 6px 0;
         border-top: none;
 
         &.dark {
-            background-color: #d4c0a1;
+            background-color: @table-bgcolor-dark;
             padding: 7px 6px;
         }
 
         & > .box {
-            box-shadow: 2px 3px 2px #7c5231;
-            background-color: #d4c0a1;
-            border: 1px solid #5f4d41;
+            box-shadow: 2px 3px 2px darken(@table-bgcolor-dark, 40%);
+            border: 1px solid darken(@table-bgcolor-dark, 50%);
+            background-color: @table-bgcolor-dark;
             margin-bottom: 9px;
             margin-right: 2px;
 
             & > .inner-box {
-                border: 1px solid #faf0d7;
+                border: 1px solid @table-light-border;
                 box-sizing: border-box;
                 padding: 2px 4px 0;
                 overflow: hidden;
