--- a/resources/less/config.less
+++ b/resources/less/config.less
@@ -27,4 +27,4 @@
 @subnavigation-hover    : #fff;
 @subnavigation-bgcolor  : #14433f;
 
-@notification-bgcolor   : @table-bgcolor;
+@notification-bgcolor   : @table-bgcolor-dark;
