--- a/resources/less/config.less
+++ b/resources/less/config.less
@@ -1,7 +1,7 @@
 @image-path             : '../img';
 @font-path              : '../fonts';
 
-@link-color             : red;//#004294;
+@link-color             : #004294;
 @heading-color          : #5a2800;
 @online-color           : #cfa600;
 @offline-color          : #ef0000;
