--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -1,29 +1,30 @@
-
-.library-creatures {
-
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /library/creatures
+ */
+.library-creatures #middle-column {
 	.inner-box {
-		display:inline-block;
+		display: inline-block;
 	}
 
 	.monster {
-
-		height:100px;
-		width:100px;
-		float:left;
-		margin-left:5px;
-		margin-top:5px;
+		margin-left: 5px;
+		margin-top: 5px;
+		height: 100px;
+		width: 100px;
+		float: left;
 
 		.title {
 			text-align: center;
 			word-break: normal;
-			margin:0px;
+			margin: 0px;
 		}
 
 		img {
-			display:block;
+			display: block;
 			margin: 0 auto;
 		}
-
 	}
-
 }
