--- a/resources/less/tibia/elements.less
+++ b/resources/less/tibia/elements.less
@@ -5,6 +5,7 @@ html {
 body {
     background: url('@{image-path}/background-artwork.jpg') no-repeat top center #051122;
     font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
+    color: @heading-color;
     overflow-y: scroll;
     font-size: 13px;
     margin: 0;
