[Library] All maps page

--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -27,3 +27,49 @@
 	}
 
 }
+
+.library-maps {
+
+	.download-small-map {
+		text-align: center;
+		margin-top: 5px;
+		margin-bottom: 5px;
+	}
+
+	img.map-small {
+		width: 659px;
+		height: 762px;
+		display: block;
+		margin: 0 auto;
+		margin-top: 30px;
+	}
+
+	.top-text {
+		font-size: 9pt;
+		color: #5A2800;
+		font-family: Verdana, Arial, Times New Roman, sans-serif;
+		padding: 5px;
+	}
+
+	.block {
+		margin-left: 26px;
+		margin-top: 11px;
+		.title {
+			font-weight: bold;
+			font-family: Verdana, Arial, Times New Roman, sans-serif;
+			  font-size: 10pt;
+			  color: #5A2800;
+		}
+
+		li {
+			list-style: none;
+			font-family: Verdana, Arial, Times New Roman, sans-serif;
+			font-size: 10pt;
+			color: #5A2800;
+			margin-left: 10px;
+			line-height: 17px;
+		}
+
+	}
+
+}
