--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -31,6 +31,12 @@
 
 }
 
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /library/maps
+ */
 .library-maps {
 
 	.download-small-map {
