--- a/resources/less/tibia/layout/middle-column.less
+++ b/resources/less/tibia/layout/middle-column.less
@@ -100,6 +100,10 @@
                 min-height: 367px;
                 padding: 5px;
 
+                &.fluid {
+                    min-height: 5px !important;
+                }
+
                 & > p {
                     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
                     margin: 5px 5px 15px;
