Bunch of character views & minor adjustments

--- a/resources/less/config.less
+++ b/resources/less/config.less
@@ -3,7 +3,7 @@
 
 @link-color             : #004294;
 @heading-color          : #5a2800;
-@online-color           : #cfa600;
+@online-color           : #00BF00;
 @offline-color          : #ef0000;
 @error-color            : @offline-color;
 
