--- a/resources/less/tibia/layout/right-column.less
+++ b/resources/less/tibia/layout/right-column.less
@@ -24,12 +24,12 @@
         .online {
             font-family: Verdana, Arial, Times New Roman, sans-serif;
             text-decoration: none;
-            color: @online-color;
             font-weight: normal;
             text-align: center;
             position: absolute;
             line-height: 8pt;
             cursor: pointer;
+            color: #cfa600;
             display: block;
             font-size: 7pt;
             bottom: 13px;
