--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -45,10 +45,9 @@
 
 	img.map-small {
 		margin-top: 30px;
-		display: block;
 		margin: 0 auto;
-		height: 762px;
-		width: 659px;
+
+		.img-responsive(block);
 	}
 
 	.top-text {
