Responsive map area

--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -36,7 +36,7 @@
  *
  * @route  /library/maps
  */
-.library-maps {
+.library-maps #middle-column {
 	.download-small-map {
 		margin-bottom: 5px;
 		text-align: center;
