Experience table & minor cleanups

--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -34,6 +34,14 @@
  * The following styles were written with the subsequent route in mind,
  * although are not necessarily limited to it.
  *
+ * @route  /library/experience
+ */
+.library-experience #middle-column { }
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
  * @route  /library/maps
  */
 .library-maps #middle-column {
