--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -2,6 +2,7 @@
 
 @import 'tibia/tibia';
 
+@import 'routes/about';
 @import 'routes/account';
 @import 'routes/support';
 @import 'routes/library';
