--- a/resources/less/config.less
+++ b/resources/less/config.less
@@ -27,4 +27,5 @@
 @subnavigation-hover    : #fff;
 @subnavigation-bgcolor  : #14433f;
 
+@first-letter-color     : #690000;
 @notification-bgcolor   : @table-bgcolor-dark;
