--- a/resources/less/routes/account.less
+++ b/resources/less/routes/account.less
@@ -130,7 +130,11 @@
  *
  * @route  /account/password
  */
-.account-password #middle-column { }
+.account-password #middle-column {
+    .content.dark {
+        padding: 7px 6px 5px;
+    }
+}
 
 
 /**
@@ -139,7 +143,11 @@
  *
  * @route  /account/email
  */
-.account-email #middle-column { }
+.account-email #middle-column {
+    .content.dark {
+        padding: 7px 6px 5px;
+    }
+}
 
 
 /**
@@ -148,7 +156,11 @@
  *
  * @route  /account/rename
  */
-.account-rename #middle-column { }
+.account-rename #middle-column {
+    .content.dark {
+        padding: 7px 6px 5px;
+    }
+}
 
 
 /**
@@ -157,7 +169,11 @@
  *
  * @route  /account/terminate
  */
-.account-terminate #middle-column { }
+.account-terminate #middle-column {
+    .content.dark {
+        padding: 7px 6px 5px;
+    }
+}
 
 
 /**
@@ -198,6 +214,10 @@
  * @route  /account/character/{id}/delete
  */
 .account-character-delete #middle-column {
+    .content.dark {
+        padding: 7px 6px 5px;
+    }
+    
     p {
         margin: 5px 0;
     }
@@ -210,7 +230,11 @@
  *
  * @route  /account/character/{id}/name
  */
-.account-character-name #middle-column { }
+.account-character-name #middle-column {
+    .content.dark {
+        padding: 7px 6px 5px;
+    }
+}
 
 
 /**
@@ -238,4 +262,8 @@
  *
  * @route  /account/character/{id}/sex
  */
-.account-character-sex #middle-column { }
+.account-character-sex #middle-column {
+    .content.dark {
+        padding: 7px 6px 5px;
+    }
+}
