--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -30,13 +30,50 @@
 	}
 }
 
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /library/spells
+ */
+.library-spells #middle-column { }
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /library/achievements
+ */
+.library-achievements #middle-column { }
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /library/quests
+ */
+.library-quests #middle-column {
+	.begins {
+		margin-top: 5px;
+	}
+}
+
+
 /**
  * The following styles were written with the subsequent route in mind,
  * although are not necessarily limited to it.
  *
  * @route  /library/experience
  */
-.library-experience #middle-column { }
+.library-experience #middle-column {
+	.content.dark {
+        padding: 7px 6px;
+    }
+}
+
 
 /**
  * The following styles were written with the subsequent route in mind,
@@ -77,5 +114,19 @@
 			line-height: 17px;
 			list-style: none;
 		}
+	}
+}
+
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /library/genesis
+ */
+.library-genesis #middle-column { 
+	span.spacer {
+		display: inline-block;
+		width: 30px;
 	}
 }
