--- a/resources/less/routes/account.less
+++ b/resources/less/routes/account.less
@@ -6,7 +6,6 @@
  */
 .account-login #middle-column {
     .buttons-right {
-        margin-right: 2px;
         float: right;
 
         a, button {
@@ -69,7 +68,6 @@
  */
 .account-index #middle-column {
     .buttons-right {
-        margin-right: 2px;
         float: right;
 
         a, button {
@@ -77,7 +75,7 @@
         }
 
         .blue-button, .green-button {
-            margin-bottom: 4px;
+            margin-bottom: 0;
         }
     }
 
@@ -117,8 +115,8 @@
             display: block;
         }
 
-        .green-button {
-            margin-bottom: 4px;
+        .blue-button, .green-button {
+            margin-bottom: 0;
         }
     }
 }
